# othello

./: Cargo.toml  README.md
benches/: othello_bench.rs
src/: lib.rs  main.rs
